feat(board): implement voting system improvements
- Add vote cleanup for non-board members when board composition changes
- Display voter details (aye/nay/abstained) in proposal view
- Improve board UI with better voting status visibility
- Implement supermajority autopass logic for proposals
- Update API and models to support voter details

--- a/dev/fids/FID-20251225-001.md
+++ b/dev/fids/FID-20251225-001.md
@@ -1,6 +1,6 @@
 # FID-20251225-001: Unified BusinessUnit Economics Calculator
 
-**Status:** PLANNED
+**Status:** COMPLETED
 **Priority:** HIGH
 **Complexity:** 3/5
 **Created:** 2025-12-25
