feat(theme): implement midnight and black theme support
Add theme utility classes and CSS overrides for midnight (dark blue-gray) and black themes. Includes background, text, and border styling with proper contrast ratios for readability. Also updates FID status to COMPLETE.

--- a/dev/fids/FID-20251225-007.md
+++ b/dev/fids/FID-20251225-007.md
@@ -1,6 +1,6 @@
 # FID-20251225-007: Fix Theme Display Issues (Midnight & Black Modes)
 
-**Status:** PLANNED
+**Status:** COMPLETE
 **Priority:** H
 **Complexity:** 3
 **Created:** 2025-12-25
