fix(auth): ensure MongoDB connection before database operations
Add connectMongo() calls in auth helper functions to prevent "Mongo DB not connected" errors in serverless environments. This ensures database operations only execute after connection is established.

--- a/dev/fids/FID-20260102-001.md
+++ b/dev/fids/FID-20260102-001.md
@@ -1,28 +1,48 @@
-# FID-20260102-001: Remove Automatic Corporation Creation on Registration
+# FID-20260102-001: Fix MongoDB Connection Timing Issues
 
 ## Status: COMPLETED
 
 ## Problem
-Corporation and stock market pages are failing with "Mongo DB not connected" errors in production (Vercel). The automatic corporation creation during user registration may be causing issues with the MongoDB connection or timing.
+Corporation and stock market pages are failing with "Mongo DB not connected" errors in production (Vercel). Multiple issues were identified:
+1. Automatic corporation creation during user registration causing complexity
+2. Auth helper functions calling database operations before MongoDB connection established
 
-## Root Cause
+## Root Causes
+
+### Issue 1: Auto-Corporation Creation
 During user registration (`app/api/auth/register/route.ts`), the system automatically creates a corporation for the new user via `CorporationService.createForUser()`. This adds complexity and potential points of failure during registration.
 
-## Solution
+### Issue 2: Auth Helper Timing
+The `lib/auth.ts` helper functions (`getAuthUserId`, `getAuthUser`) call database operations (`updateLastSeen`, `findById`) without first ensuring MongoDB is connected. In serverless environments like Vercel, this causes "Mongo DB not connected" errors when the auth helper runs before the route handler establishes the connection.
+
+## Solutions
+
+### Fix 1: Remove Auto-Corporation Creation
 Remove the automatic corporation creation from the registration flow. Users will create corporations manually through the existing UI at `/corporation/create`.
+
+### Fix 2: Ensure MongoDB Connection in Auth Helpers
+Add `connectMongo()` calls in `lib/auth.ts` before any database operations:
+- `getAuthUserId`: Call `connectMongo()` before `updateLastSeen()` (fire-and-forget)
+- `getAuthUser`: Call `connectMongo()` before `UserModel.findById()`
 
 ## Changes Required
 1. Remove `CorporationService` import from register route
-2. Remove auto-corporation creation code block (lines 79-86)
+2. Remove auto-corporation creation code block
 3. Keep welcome message functionality
+4. Add `connectMongo` import to `lib/auth.ts`
+5. Chain `connectMongo()` before `updateLastSeen()` in fire-and-forget pattern
+6. Add `await connectMongo()` in `getAuthUser()` before database lookup
 
 ## Files Modified
-- `app/api/auth/register/route.ts`
+- `app/api/auth/register/route.ts` - Removed auto-corporation creation
+- `lib/auth.ts` - Added MongoDB connection before database operations
 
 ## Testing
 - Register a new user
 - Verify registration succeeds without auto-corporation
 - Verify user can manually create corporation at `/corporation/create`
+- Verify corporation and stock market pages load without "Mongo DB not connected" errors
+- Verify `updateLastSeen` logs no errors in Vercel logs
 
 ## Created
 2026-01-02
